--- a/old_www/main-min.html
+++ b/old_www/main-min.html
@@ -5,21 +5,21 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>V5-FFR build 1</title>
-	<link rel="stylesheet" type="text/css" href="css/ffr.css">
-  <link rel="stylesheet" href="css/splitpane.css">
-  <link rel="stylesheet" href="css/tabbar.css">
-  <link rel="stylesheet" href="css/slider.css">
-  <link rel="stylesheet" href="css/progressbar.css">
-  <link rel="stylesheet" href="css/twothumbslider.css">  
+	<link rel="stylesheet" type="/text/css" href="css/ffr.css">
+  <link rel="stylesheet" href="/css/splitpane.css">
+  <link rel="stylesheet" href="/css/tabbar.css">
+  <link rel="stylesheet" href="/css/slider.css">
+  <link rel="stylesheet" href="/css/progressbar.css">
+  <link rel="stylesheet" href="/css/twothumbslider.css">
 
-  <link rel="stylesheet" href="closure-library/closure/goog/css/common.css">
-  <link rel="stylesheet" href="closure-library/closure/goog/css/menu.css">
-  <link rel="stylesheet" href="closure-library/closure/goog/css/menuitem.css">
-  <link rel="stylesheet" href="closure-library/closure/goog/css/menuseparator.css">
-  <link rel="stylesheet" href="closure-library/closure/goog/css/toolbar.css">
-  <link rel="stylesheet" href="closure-library/closure/goog/css/dialog.css">  
-  <link rel="stylesheet" href="closure-library/closure/goog/css/tab.css">
-  <link rel="stylesheet" href="closure-library/closure/goog/css/tabbar.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/common.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/menu.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/menuitem.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/menuseparator.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/toolbar.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/dialog.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/tab.css">
+  <link rel="stylesheet" href="/closure-library/closure/goog/css/tabbar.css">
   <script type="text/javascript" src="https://cdn.rawgit.com/mrdoob/stats.js/master/build/stats.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ami.js/0.32.0/ami.min.js"></script>  
