--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.js"></script>-->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
+<!--    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>-->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/heart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
